Squash many warnings across the codebase